--- a/src/UI/Windows/Views/Pages/MonitorPage.xaml
+++ b/src/UI/Windows/Views/Pages/MonitorPage.xaml
@@ -8,7 +8,7 @@
       xmlns:models="clr-namespace:OSDPBench.Core.Models;assembly=OSDPBench.Core"
       xmlns:converters="clr-namespace:OSDPBench.Windows.Converters"
       xmlns:controls="clr-namespace:OSDPBench.Windows.Views.Controls"
-      mc:Ignorable="d" 
+      xmlns:markup="clr-namespace:OSDPBench.Windows.Markup"      mc:Ignorable="d" 
       d:DataContext="{d:DesignInstance local:MonitorPage,
 									 IsDesignTimeCreatable=False}"
       d:DesignHeight="450" d:DesignWidth="800"
@@ -109,7 +109,7 @@
 						<DataGridTemplateColumn Header="Details" Width="*">
 							<DataGridTemplateColumn.CellTemplate>
 								<DataTemplate>
-									<ui:Button Content="Expand" DataContext="{Binding Details}"
+									<ui:Button Content="{markup:Localize Monitor_Expand}" DataContext="{Binding Details}"
 									           Margin="5"
 									        Click="ToggleRowDetails" />
 								</DataTemplate>
