--- a/src/UI/Windows/Views/Pages/InfoPage.xaml
+++ b/src/UI/Windows/Views/Pages/InfoPage.xaml
@@ -27,6 +27,21 @@
             <TextBlock Text="{markup:Localize Info_ApplicationName}" FontWeight="Bold" />
             <TextBlock Text="{Binding AppVersion}" FontWeight="Bold"  />
             <TextBlock Text="{Binding CopyWriteNotice}" FontWeight="Bold"  />
+            
+            <!-- Language Selection -->
+            <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
+                <TextBlock Text="{markup:Localize Language_Selection}" 
+                           VerticalAlignment="Center" 
+                           Margin="0,0,10,0" 
+                           FontWeight="SemiBold"/>
+                <ComboBox x:Name="LanguageComboBox"
+                          ItemsSource="{Binding ViewModel.LanguageViewModel.AvailableLanguages}"
+                          SelectedItem="{Binding ViewModel.LanguageViewModel.SelectedLanguage, Mode=TwoWay}"
+                          DisplayMemberPath="DisplayName"
+                          ToolTip="{markup:Localize Language_SelectLanguage}"
+                          Width="150"
+                          VerticalAlignment="Center" />
+            </StackPanel>
         </StackPanel>
         
         <Image Grid.Column="1"
